# fitsync

./: .gitignore  Cargo.toml  config_example.json
.github/workflows/: ci.yml
src/: api.rs  auth.rs  config.rs  destination.rs  fitbit.rs  main.rs  runloop.rs  state.rs  sync.rs
static/: index.html  style.css
static/js/: app.js
