[package]
name = "fitsync"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
rocket = "0.4"
rocket_contrib = "0.4"
oauth2 = "4.1"
users = "0.11"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
base64 = "0.13"
clokwerk = "0.3"
log = "0.4"
env_logger = "0.9"
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = "0.4"
strum = "0.21"
strum_macros = "0.21"
lazy_static = "1.4"
webbrowser = "0.5"
directories = "3.0"
csv = "1.1"
